# HabitatControl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.bak  Readme.md
habitat-manager/: habitat-light-manager.js  habitat-logger.js  habitat-manager  package.json
lib/: DHT22.cpp  DHT22.h  DHT22_SensorResponseModel.h  RCSwitch.h
rf-comm/: RCSwitch.h
src/: Logging.cpp  Logging.h  Overmind.cpp  Overmind.h  RFComm.cpp  RFComm.h  TemperatureControl.cpp  TemperatureControl.h  main.cpp
temperature-sensor/: DHT22.cpp  DHT22.h  DHT22_SensorResponseModel.h  main.cpp  temperature-sensor.py
www/: app.js  package.json
www/controllers/: HomeController.js
www/views/: error.jade
www/views/home/: vwIndex.jade
www/views/layouts/: layoutStandard.jade
